Fix spacing issue

--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -6,6 +6,7 @@
     width: 10%;
     padding: 0 vars.$spc-25;
     min-width: 152px;
+    box-sizing: content-box;
 }
 
 .nav {
